--- a/cs246_3.html
+++ b/cs246_3.html
@@ -662,7 +662,7 @@
                         <span class="cline">07&nbsp;&nbsp;</span>Node *n = new Node{1, nex Node{1, new Node{2, new Node{}, nullptr}}};<br>
                     </code></pre>
                 </span>
-                <img src="image/cs246/lec9/lec9_1.png" width="35%" height="35%">
+                <img src="./image/cs246/lec9/lec9_1.png" width="35%" height="35%">
                 <p>
                     Simply copy of fields -&gt; only the first node is actually copied (<strong>shallow</strong> copy).<br>
                     If you want a <strong>deep</strong> copy (copies the whole list), must write you own copy constructor.<br>
@@ -755,7 +755,7 @@
                     If we say <code>delete np</code>...<br>
                     - calls <code>*np</code>'s destructor, which doesn't do anything.<br>
                 </p>
-                <img src="image/cs246/lec9/lec9_2.png" width="45%" height="45%">
+                <img src="./image/cs246/lec9/lec9_2.png" width="45%" height="45%">
                 <p>
                     <br>
                     Write a destructor to ensure the whole list is freed:<br>
